fix header spacing on playbook page

--- a/src/ui/components/PagePlaybook/stylesheet.css
+++ b/src/ui/components/PagePlaybook/stylesheet.css
@@ -14,6 +14,16 @@
   color: var(--color-accent);
 }
 
+.first-headline {
+  margin-top: 2rem;
+}
+
+@media (max-width: 887px) {
+  .first-headline {
+    margin-top: 7rem;
+  }
+}
+
 @export button;
 @export typography;
 @export layout;
